--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"
       ></script>
-      <script src="js/scripts.js"></script>
+      <script src="js/script.js"></script>
     </body>
   </html>
 </html>
