--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="modal-body">
               <h1 id="modal-pokemon-name"></h1>
               <p id="modal-pokemon-height"></p>
-              <img id="modal-pokemon-image" src="" alt="pokemon image" />
+              <img id="modal-pokemon-image" alt="pokemon image" />
             </div>
             <div class="modal-footer">
               <button
