--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous"
       />
-      <link rel="stylesheet" href="styles.css" />
+      <link rel="stylesheet" href="dist/style.min.css" />
       <title>Pokedex</title>
     </head>
     <body>
@@ -103,7 +103,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"
       ></script>
-      <script src="js/script.js"></script>
+      <script src="dist/script.min.js"></script>
     </body>
   </html>
 </html>
